build: update for ax_code_coverage.m4 version 2019.01.06
@CODE_COVERAGE_RULES@ doesn't exist any more and needs to be replaced.
Also includes a compatibility wrapper for older versions of the file.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -22,7 +22,13 @@ MOSTLYCLEANFILES =
 
 ### Add ax_* rules ###
 # ax_code_coverage
+if AUTOCONF_CODE_COVERAGE_2019_01_06
+include $(top_srcdir)/aminclude_static.am
+clean-local: code-coverage-clean
+distclean-local: code-coverage-dist-clean
+else
 @CODE_COVERAGE_RULES@
+endif
 
 ### Library ###
 lib_LTLIBRARIES += libtpm2-totp.la
