tpm2-totp: implement -T/--tcti option
The tcti context can be set using this option or via the environment
variable TPM2TOTP_TCTI. The syntax follows the one from tpm2-tools and
tpm2-tss-engine.

The code is implemented in a separate file so that it can be reused in
the integration tests.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -46,7 +46,7 @@ DISTCLEANFILES += $(pkgconfig_DATA)
 ### Executable ###
 bin_PROGRAMS += tpm2-totp
 
-tpm2_totp_SOURCES = src/tpm2-totp.c
+tpm2_totp_SOURCES = src/tpm2-totp.c src/tpm2-totp-tcti.c src/tpm2-totp-tcti.h
 tpm2_totp_LDADD = $(AM_LDADD) libtpm2-totp.la
 tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
 
