test: make the integration tests use a TPM simulator
Currently the integration tests use the first TPM they find on the system.
This commit starts a TPM simulator for every integration test and
configures the TCTI environment variable to use it, allowing parallel
execution of the tests.

The test harness is adapted from the one in tpm2-tss-engine.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -59,11 +59,14 @@ endif #INTEGRATION
 TESTS_SHELL = test/libtpm2-totp.sh \
               test/tpm2-totp.sh
 EXTRA_DIST += $(TESTS_SHELL)
+TEST_EXTENSIONS = .sh
+SH_LOG_COMPILER = $(srcdir)/test/sh_log_compiler.sh
+EXTRA_DIST += $(SH_LOG_COMPILER)
 
 if INTEGRATION
 check_PROGRAMS += libtpm2-totp
 
-libtpm2_totp_SOURCES = test/libtpm2-totp.c
+libtpm2_totp_SOURCES = test/libtpm2-totp.c src/tpm2-totp-tcti.c src/tpm2-totp-tcti.h
 libtpm2_totp_CFLAGS = $(AM_CFLAGS) $(OATH_CFLAGS)
 libtpm2_totp_LDADD = $(AM_LDADD) $(OATH_LIBS) libtpm2-totp.la
 libtpm2_totp_LDFLAGS = $(AM_LDFLAGS) $(OATH_LDFLAGS)
