Add pkg-config file
Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ include_HEADERS =
 lib_LTLIBRARIES =
 noinst_LTLIBRARIES =
 EXTRA_DIST =
+DISTCLEANFILES =
 CLEANFILES =
 MOSTLYCLEANFILES =
 
@@ -38,6 +39,9 @@ include_HEADERS += include/tpm2-totp.h
 libtpm2_totp_la_SOURCES = src/libtpm2-totp.c
 libtpm2_totp_la_LIBADD = $(AM_LDADD)
 libtpm2_totp_la_LDFLAGS = $(AM_LDFLAGS) '(tpm2_totp)'
+
+pkgconfig_DATA = dist/tpm2-totp.pc
+DISTCLEANFILES += $(pkgconfig_DATA)
 
 ### Executable ###
 bin_PROGRAMS += tpm2-totp
