--- a/configure.ac
+++ b/configure.ac
@@ -193,6 +193,13 @@ AS_IF([test "x$enable_integration" != xno],
              ])
       ])
 
+AC_ARG_ENABLE([gtk],
+              [AS_HELP_STRING([--disable-gtk], [build gtk application])],,
+              [enable_gtk=yes])
+AM_CONDITIONAL([GTK], [test "x$enable_gtk" = "xyes"])
+AS_IF([test "x$enable_gtk" = "xyes"],
+      [PKG_CHECK_MODULES(GTK, [gio-2.0 >= 2.50 gtk+-3.0 >= 3.22])])
+
 AC_OUTPUT
 
 AC_MSG_RESULT([
@@ -203,4 +210,5 @@ $PACKAGE_NAME $VERSION
     initramfs-tools: $with_initramfstoolsdir
     mkinitcpio:      $with_mkinitcpiodir
     plymouth:        $have_plymouth
+    gtpm2-tss (gtk): $enable_gtk
 ])
