Add plymouth integration
Add an executable plymouth-tpm2-totp that can be run in an initramfs
with plymouth integration. It displays the TOTP every 30 seconds as a
plymouth message and automatically quits once the system is booted.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,7 @@ AM_LDADD        = $(TSS2_ESYS_LIBS) $(QRENCODE_LIBS) -ldl
 
 # Initialize empty variables to be extended throughout
 bin_PROGRAMS =
+libexec_PROGRAMS =
 noinst_PROGRAMS =
 check_PROGRAMS =
 include_HEADERS =
@@ -49,6 +50,14 @@ bin_PROGRAMS += tpm2-totp
 tpm2_totp_SOURCES = src/tpm2-totp.c src/tpm2-totp-tcti.c src/tpm2-totp-tcti.h
 tpm2_totp_LDADD = $(AM_LDADD) libtpm2-totp.la
 tpm2_totp_LDFLAGS = $(AM_LDFLAGS)
+
+if PLYMOUTH
+libexec_PROGRAMS += plymouth-tpm2-totp
+plymouth_tpm2_totp_SOURCES = src/plymouth-tpm2-totp.c src/tpm2-totp-tcti.c src/tpm2-totp-tcti.h
+plymouth_tpm2_totp_CFLAGS = $(AM_CFLAGS) $(PLY_BOOT_CLIENT_CFLAGS)
+plymouth_tpm2_totp_LDADD = $(AM_LDADD) $(PLY_BOOT_CLIENT_LIBS) libtpm2-totp.la
+plymouth_tpm2_totp_LDFLAGS = $(AM_LDFLAGS) $(PLY_BOOT_CLIENT_LDFLAGS)
+endif # PLYMOUTH
 
 ### Tests ###
 TESTS =
