--- a/Makefile.am
+++ b/Makefile.am
@@ -64,10 +64,15 @@ TESTS =
 
 if INTEGRATION
 TESTS += $(TESTS_SHELL)
+
+if PLYMOUTH
+TESTS += $(TESTS_PLYMOUTH)
+endif # PLYMOUTH
 endif #INTEGRATION
 TESTS_SHELL = test/libtpm2-totp.sh \
               test/tpm2-totp.sh
-EXTRA_DIST += $(TESTS_SHELL)
+TESTS_PLYMOUTH = test/plymouth-tpm2-totp.sh
+EXTRA_DIST += $(TESTS_SHELL) $(TESTS_PLYMOUTH)
 TEST_EXTENSIONS = .sh
 SH_LOG_COMPILER = $(srcdir)/test/sh_log_compiler.sh
 EXTRA_DIST += $(SH_LOG_COMPILER)
