--- a/.gitignore
+++ b/.gitignore
@@ -12,26 +12,33 @@ config.status
 config.sub
 configure
 depcomp
+dist/*.pc
 install-sh
 libtool
 ltmain.sh
+m4/ax_*.m4
 m4/libtool.m4
 m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 m4/lt~obsolete.m4
+m4/pkg.m4
 missing
 */.dirstamp
 */.libs/
 */*.o
 */*.lo
-*/*.la
+*.la
 *.gcno
 *.gcda
 *.log
 *.trs
 test-driver
-man/*.1
-man/*.3
-man/*.7
+man/man1/
+man/man3/
+man/man7/
 *~
+/libtpm2-totp
+/tpm2-totp
+/AUTHORS
+/*.tar.gz
