ci: fix typo in test-suite.log filename
The log file is only present if make distcheck fails, in which case it
is in the temporary build directory, otherwise it will be cleaned up.
Therefore don't fail if there is no log file to display.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -101,7 +101,7 @@ script:
   - make -j$(nproc) check
   - cat test-suite.log
   - make -j$(nproc) distcheck
-  - cat config.log $(find -name test-suit.log) || true
+  - cat tpm2-totp-*/_build/sub/test-suite.log config.log || true
   - popd
 
 after_success:
