dist: add mkinitcpio hooks
These hooks are used to add tpm2-totp to an initramfs image using
mkinitcpio, the tool used by Arch Linux to generate initial ramdisks.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -116,3 +116,9 @@ EXTRA_DIST += \
     man/tpm2-totp.1.md
 CLEANFILES += \
     $(man1_MANS)
+
+if HAVE_MKINITCPIO
+initcpio_install_DATA = dist/initcpio/install/tpm2-totp
+initcpio_hooks_DATA = dist/initcpio/hooks/tpm2-totp
+endif # HAVE_MKINITCPIO
+EXTRA_DIST += dist/initcpio/install/tpm2-totp dist/initcpio/hooks/tpm2-totp
