--- a/configure.ac
+++ b/configure.ac
@@ -103,10 +103,22 @@ AS_IF([test "x$enable_integration" != xno],
              [AC_MSG_ERROR([Integration tests require the ss executable])])
       ])
 
+AC_ARG_WITH([mkinitcpiodir],
+            AS_HELP_STRING([--with-mkinitcpiodir=DIR], [directory for mkinitcpio hooks]))
+AC_CHECK_PROG([mkinitcpio], [mkinitcpio], [yes])
+AS_IF([test "x$mkinitcpio" = xyes -a -z "$with_mkinitcpiodir"],
+      [with_mkinitcpiodir=$sysconfdir/initcpio])
+AS_IF([test "x$with_mkinitcpiodir" != xno],
+      [AC_SUBST([initcpio_installdir], [$with_mkinitcpiodir/install])
+       AC_SUBST([initcpio_hooksdir], [$with_mkinitcpiodir/hooks])
+      ])
+AM_CONDITIONAL(HAVE_MKINITCPIO, [test -n "$with_mkinitcpiodir" -a "x$with_mkinitcpiodir" != xno])
+
 AC_OUTPUT
 
 AC_MSG_RESULT([
 $PACKAGE_NAME $VERSION
     man-pages:  $PANDOC
+    mkinitcpio: $with_mkinitcpiodir
 ])
     
