--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: BSD-3
+# SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) 2018 Fraunhofer SIT
 # All rights reserved.
 
