build: link against tss2-mu
Currently the linking of libtpm2-totp relies on the fact that the upstream
tpm2-tss pkg-config file explicitly requires tss2-mu. Since this is
wrong, but we need access to the marshalling functions, explicitly link
against tss2-mu.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/configure.ac
+++ b/configure.ac
@@ -80,6 +80,7 @@ AS_IF([test "x$enable_debug" != "xno"],
 
 PKG_PROG_PKG_CONFIG([0.25])
 PKG_CHECK_MODULES([TSS2_ESYS],[tss2-esys])
+PKG_CHECK_MODULES([TSS2_MU],[tss2-mu])
 PKG_CHECK_MODULES([QRENCODE],[libqrencode])
 
 AC_PATH_PROG([PANDOC], [pandoc])
