dist: add dracut module for plymouth-tpm2-totp
Since most distributions using dracut will have plymouth installed as well, we
concentrate on plymouth for now. For user convenience the module is
automatically included in the initramfs if "hostonly" mode is used and a
TOTP secret is stored (which is checked by running "tpm2-totp
calculate"), otherwise the user can still add it manually to
"dracutmodules".

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -137,6 +137,15 @@ EXTRA_DIST += \
 CLEANFILES += \
     $(man1_MANS)
 
+### initramfs hooks ###
+
+if HAVE_DRACUT
+if PLYMOUTH
+dracut_DATA = dist/dracut/module-setup.sh dist/dracut/tpm2-totp.sh
+endif # PLYMOUTH
+endif # HAVE_DRACUT
+EXTRA_DIST += dist/dracut/tpm2-totp.sh
+
 if HAVE_MKINITCPIO
 initcpio_install_DATA = dist/initcpio/install/tpm2-totp
 initcpio_hooks_DATA = dist/initcpio/hooks/tpm2-totp
