--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ config.sub
 configure
 depcomp
 dist/*.pc
+dist/dracut/module-setup.sh
 dist/initcpio/install/plymouth-tpm2-totp
 install-sh
 libtool
