doc: generate tpm2-totp(3) man page with doxygen
The generated man page is included in distributions so that doxygen
doesn't need to be available when installing from a source tarball.

Signed-off-by: Jonas Witschel <diabonas@gmx.de>

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ depcomp
 dist/*.pc
 dist/dracut/module-setup.sh
 dist/initcpio/install/plymouth-tpm2-totp
+Doxyfile
+doxygen-doc/
 install-sh
 libtool
 ltmain.sh
