dist: add sd-tpm2-totp mkinitcpio hook
Signed-off-by: Oskar Kohout <oskar@evilbit.at>

--- a/Makefile.am
+++ b/Makefile.am
@@ -195,15 +195,20 @@ EXTRA_DIST += dist/initramfs-tools/scripts/init-premount/tpm2-totp
 
 if HAVE_MKINITCPIO
 helpers_SCRIPTS = dist/show-tpm2-totp
-initcpio_install_DATA = dist/initcpio/install/tpm2-totp
+initcpio_install_DATA = dist/initcpio/install/tpm2-totp dist/initcpio/install/sd-tpm2-totp
 initcpio_hooks_DATA = dist/initcpio/hooks/tpm2-totp
+
+systemdsystemunit_DATA = dist/tpm2-totp.service
+install-data-hook:
+	mkdir -p $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
+	cd $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
+	$(LN_S) ../tpm2-totp.service
 if HAVE_PLYMOUTH
 initcpio_install_DATA += dist/initcpio/install/plymouth-tpm2-totp dist/initcpio/install/sd-plymouth-tpm2-totp
 initcpio_hooks_DATA += dist/initcpio/hooks/plymouth-tpm2-totp
 
-systemdsystemunit_DATA = dist/plymouth-tpm2-totp.service
+systemdsystemunit_DATA += dist/plymouth-tpm2-totp.service
 install-data-hook:
-	mkdir -p $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
 	cd $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
 	$(LN_S) ../plymouth-tpm2-totp.service
 endif # HAVE_PLYMOUTH
