dist: ensure TOTP is displayed at least once before password prompt
Signed-off-by: Oskar Kohout <oskar@evilbit.at>

--- a/Makefile.am
+++ b/Makefile.am
@@ -202,6 +202,7 @@ systemdsystemunit_DATA = dist/tpm2-totp.service dist/tpm2-totp.timer
 install-data-hook:
 	mkdir -p $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
 	cd $(DESTDIR)$(systemdsystemunitdir)/sysinit.target.wants && \
+	$(LN_S) ../tpm2-totp.service && \
 	$(LN_S) ../tpm2-totp.timer
 if HAVE_PLYMOUTH
 initcpio_install_DATA += dist/initcpio/install/plymouth-tpm2-totp dist/initcpio/install/sd-plymouth-tpm2-totp
