Moving whitespace and coverity jobs to main yml
Signed-off-by: malikabhi05 <abhishek.malik@intel.com>

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,3 +41,32 @@ jobs:
       - name: failure
         if: ${{ failure() }}
         run: cat build/test-suite.log || true
+  coverity-test:
+    runs-on: ubuntu-latest
+    environment: coverity
+    if: contains(github.ref, 'coverity_scan') && github.event_name == 'push'
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Launch Container
+        env:
+          ENABLE_COVERITY: true
+          TPM2TSS_BRANCH: "3.0.x"
+          TPM2TOOLS_BRANCH: "4.0"
+          REPO_BRANCH: ${{ github.ref }}
+          REPO_SLUG: ${{ github.repository }}
+          DOCKER_IMAGE: ubuntu-18.04
+          CC: gcc
+          COVERITY_SCAN_TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
+          COVERITY_SUBMISSION_EMAIL: diabonas@gmx.de
+        run: ./.ci/ci-runner.sh
+  whitespace-check:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' && !contains(github.ref, 'coverity_scan')
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+      - name: Perform Whitespace Check
+        env:
+          BASE_REF: ${{ github.base_ref }}
+        run: git fetch origin "$BASE_REF" && git diff --check "origin/$BASE_REF"
