Switching jobs from in-repo CI script to composite action CI script
Signed-off-by: malikabhi05 <abhishek.malik@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,15 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Launch Container
-        env:
+      - name: Launch Action
+        uses:
+          tpm2-software/ci/runCI@main
+        with:
           DOCKER_IMAGE: "${{ matrix.DOCKER_IMAGE }}"
           TPM2TSS_BRANCH: "${{ matrix.TPM2TSS_BRANCH }}"
           TPM2TOOLS_BRANCH: "${{ matrix.TPM2TOOLS_BRANCH }}"
           CC: "${{ matrix.CC }}"
-        run: ./.ci/ci.sh
+          PROJECT_NAME: ${{ github.event.repository.name }}
       - name: failure
         if: ${{ failure() }}
         run: cat build/test-suite.log || true
@@ -30,14 +32,16 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Launch Container
-        env:
+      - name: Launch Action
+        uses:
+          tpm2-software/ci/runCI@main
+        with:
           DOCKER_IMAGE: ubuntu-18.04
           TPM2TSS_BRANCH: "3.0.x"
           TPM2TOOLS_BRANCH: "4.0"
           CC: gcc
           ENABLE_COVERAGE: true
-        run: ./.ci/ci.sh
+          PROJECT_NAME: ${{ github.event.repository.name }}
       - name: failure
         if: ${{ failure() }}
         run: cat build/test-suite.log || true
@@ -48,8 +52,11 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
-      - name: Launch Container
-        env:
+      - name: Launch Coverity Scan Action
+        uses:
+          tpm2-software/ci/coverityScan@main
+        with:
+          PROJECT_NAME: ${{ github.event.repository.name }}
           ENABLE_COVERITY: true
           TPM2TSS_BRANCH: "3.0.x"
           TPM2TOOLS_BRANCH: "4.0"
@@ -59,7 +66,6 @@ jobs:
           CC: gcc
           COVERITY_SCAN_TOKEN: ${{ secrets.COVERITY_SCAN_TOKEN }}
           COVERITY_SUBMISSION_EMAIL: diabonas@gmx.de
-        run: ./.ci/ci.sh
   whitespace-check:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request' && !contains(github.ref, 'coverity_scan')
